# dbus-secret-service

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yaml
examples/: example.rs
src/: collection.rs  error.rs  item.rs  lib.rs  prompt.rs  session.rs  ss.rs  util.rs
src/proxy/: collection.rs  item.rs  mod.rs  prompt.rs  service.rs
