[package]
name = "dbus-secret-service"
repository = "https://github.com/brotskydotcom/dbus-secret-service.git"
version = "4.0.0"
authors = ["Daniel Brotsky <dan@brotsky.com>", "Walther Chen <walther.chen@gmail.com>"]
description = "Access the Secret Service API via dbus"
homepage = "https://github.com/brotskydotcom/dbus-secret-service"
keywords = ["secret-service", "password", "linux", "keychain", "dbus"]
license = "MIT OR Apache-2.0"
rust-version = "1.68"
edition = "2021"
exclude = [".github/"]
readme = "README.md"

[dependencies]
aes = "0.8"
cbc = { version = "0.1", features = ["block-padding", "alloc"], optional = true }
dbus = { version = "0.9", features = ["vendored"] }
generic-array = "1"
hkdf = "0.12.0"
num = "0.4"
once_cell = "1"
rand = "0.8"
sha2 = "0.10"
