[package]
authors = ["Daniel Brotsky <dev@brotsky.com>"]
description = "Library to interface with Secret Service API over DBUS"
documentation = "https://docs.rs/dbus-secret-service"
homepage = "https://github.com/brotskydotcom/dbus-secret-service"
repository = "https://github.com/brotskydotcom/dbus-secret-service.git"
keywords = ["secret-service", "password", "linux", "dbus"]
license = "MIT OR Apache-2.0"
name = "dbus-secret-service"
version = "4.1.0"
edition = "2021"
rust-version = "1.78"   # required for Cargo.lock v4
exclude = [".github/"]

[features]
vendored = ["dbus/vendored", "openssl?/vendored"]
crypto-rust = ["dep:aes", "dep:block-padding", "dep:cbc", "dep:fastrand", "dep:hkdf", "dep:num", "dep:once_cell", "dep:sha2"]
crypto-openssl = ["dep:fastrand", "dep:num", "dep:once_cell", "dep:openssl"]

[dependencies]
aes = { version = "0.8", optional = true }
block-padding = { version = "0.3", features = ["std"], optional = true }
cbc = { version = "0.1", features = ["block-padding", "alloc"], optional = true }
dbus = "0.9"
fastrand = { version = "2.3", optional = true }
hkdf = { version = "0.12", optional = true }
num = { version = "0.4", optional = true }
once_cell = { version = "1", optional = true }
openssl = { version = "0.10.55", optional = true }
sha2 = { version = "0.10", optional = true }
zeroize = { version = "1.8", features = ["derive"] }

[package.metadata.docs.rs]
features = ["crypto-rust"]
targets = ["x86_64-unknown-linux-gnu"]
